cmake: use proper python executable path

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,7 +27,7 @@ ExternalProject_Add(hid-usage-tables
     PREFIX ${CMAKE_BINARY_DIR}/hid-usage-tables
     GIT_REPOSITORY ${HID_USAGE_TABLES_URL}
     GIT_TAG ${HID_USAGE_TABLES_REV}
-    CONFIGURE_COMMAND ${CMAKE_COMMAND} -E chdir <SOURCE_DIR> python <SOURCE_DIR>/src/hid/codegen/cpp.py ${USAGE_TABLES_OUTPUT_DIR}
+    CONFIGURE_COMMAND ${CMAKE_COMMAND} -E chdir <SOURCE_DIR> ${Python_EXECUTABLE} <SOURCE_DIR>/src/hid/codegen/cpp.py ${USAGE_TABLES_OUTPUT_DIR}
     BUILD_COMMAND ""
     INSTALL_COMMAND ""
     UPDATE_DISCONNECTED TRUE
