add a lot of extra compile-time checks for report descriptor verification

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -24,6 +24,7 @@ target_sources(${PROJECT_NAME}-test
         descriptor_view.cpp
         formatter.cpp
         keyboard.cpp
+        mouse.cpp
 )
 target_link_libraries(${PROJECT_NAME}-test
     PRIVATE
