--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 3.14)
 
-project(hid-rp LANGUAGES CXX)
+project(hid-rp
+    LANGUAGES CXX
+    VERSION 1.0.0
+)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
