use the compiler tools available for finding bugs

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -35,14 +35,60 @@ target_link_libraries(${PROJECT_NAME}-test
 )
 catch_discover_tests(${PROJECT_NAME}-test)
 
+# https://gcc.gnu.org/onlinedocs/gcc/Warning-Options.html
+# https://embeddedartistry.com/blog/2023/09/20/leveraging-your-toolchain-to-improve-security/
+target_link_options(${PROJECT_NAME}-test
+    PRIVATE
+        -fsanitize=address
+        -fsanitize=signed-integer-overflow
+        -fsanitize=bounds
+)
 target_compile_options(${PROJECT_NAME}-test
     PRIVATE
-        $<$<CXX_COMPILER_ID:GNU>:-fconcepts-diagnostics-depth=20>
+        -ftrivial-auto-var-init=pattern
+        -fstack-protector-all
+        -fsanitize=address
+        -fno-omit-frame-pointer
+        #-fsanitize=undefined
+        -fsanitize=signed-integer-overflow
+        -fsanitize=bounds
         -Wall
         -Wextra
         -Werror
-        # https://gcc.gnu.org/onlinedocs/gcc/Warning-Options.html
-        # https://embeddedartistry.com/blog/2023/09/20/leveraging-your-toolchain-to-improve-security/
-        $<$<CXX_COMPILER_ID:GNU>:-Wshift-overflow=2>
+        -Wformat=2
         -Wsign-conversion
+        -Wuninitialized
+        -Wcast-qual
+        #-Wshadow
+        -Wimplicit-fallthrough
+        -Wfloat-equal
+        -Wstack-protector
+        $<$<CXX_COMPILER_ID:GNU>:
+            -fconcepts-diagnostics-depth=20
+            #-fanalyzer
+            -Wshift-overflow=2
+            -Warray-bounds=2
+            -Wstringop-overflow=4
+            -Wuse-after-free=3
+            -Wformat-overflow=2
+            -Wformat-truncation=2
+            -Wformat-signedness
+            -Wlogical-op
+            -Wduplicated-cond
+            -Wduplicated-branches
+            #-Wswitch-default
+            -Wcast-align=strict
+        >
+        $<$<CXX_COMPILER_ID:Clang>:
+            -Wshift-sign-overflow
+            -Warray-bounds-pointer-arithmetic
+            -Wformat-type-confusion
+            -Wcast-align
+            -Wconditional-uninitialized
+            -Wloop-analysis
+            -Wtautological-constant-in-range-compare
+            -Wcomma
+            -Wassign-enum
+            -Wunreachable-code-aggressive
+        >
 )
