exclude hid-rd-reader from build when the project isn't standalone

--- a/hid-rd-reader/CMakeLists.txt
+++ b/hid-rd-reader/CMakeLists.txt
@@ -1,2 +1,5 @@
 add_executable(hid-rd-reader main.cpp)
 target_link_libraries(hid-rd-reader PRIVATE ${PROJECT_NAME})
+if(NOT IS_TOPLEVEL_PROJECT)
+    set_target_properties(hid-rd-reader PROPERTIES EXCLUDE_FROM_ALL TRUE)
+endif()
